added intro tex

--- a/riptide/riptide.tex
+++ b/riptide/riptide.tex
@@ -36,6 +36,7 @@
 
 \input{riptide/floats}
 
+\input{riptide/0_intro}
 \input{riptide/1_overview}
 \input{riptide/2_isa}
 \input{riptide/3_compiler}
