--- a/paper.tex
+++ b/paper.tex
@@ -39,6 +39,7 @@ headsepline, % Uncomment to get a line under the header
 ]{thesis} % The class file specifying the document structure
 
 \input{headers}
+\input{floats}
 
 %----------------------------------------------------------------------------------------
 %	MARGIN SETTINGS
