--- a/refs.bib
+++ b/refs.bib
@@ -10378,7 +10378,7 @@ series = {ASPLOS '17}
   doi={10.1109/HPCA.2018.00066}
 }
 
-@article{compiler-sync,
+@article{compiler-sync
   author={Midkiff, Samuel P. and Padua, David A.},
   journal={IEEE Transactions on Computers},
   title={Compiler Algorithms for Synchronization},
@@ -10387,4 +10387,12 @@ series = {ASPLOS '17}
   number={12},
   pages={1485-1495},
   doi={10.1109/TC.1987.5009499}
+}
+
+@inproceedings{surbatovich2021automatically,
+  title={Automatically enforcing fresh and consistent inputs in intermittent systems},
+  author={Surbatovich, Milijana and Jia, Limin and Lucia, Brandon},
+  booktitle={Proceedings of the 42nd ACM SIGPLAN International Conference on Programming Language Design and Implementation},
+  pages={851--866},
+  year={2021}
 }
