--- a/sonic/sonic.tex
+++ b/sonic/sonic.tex
@@ -1,4 +1,4 @@
-\chapter{Deploying DNNs on intermittent embedded devices}
+\chapter{SONIC: Deploying DNNs on intermittent embedded devices}
 \label{chapter:sonic}
 
 \newcommand{\metric}{IMpJ\xspace}
